feat: support openjdk-8 rock generation (#170)
* feat: add check for openjdk-8

OpenJDK 8 does not have jlink tool and should not use jlink plugin. Introduce a check in RockcraftOptions

* feat: force build toolchain to 8

* feat: use chisel slices in Raw Runtime part

* test: fix test casts for openjdk-8

* test: add toolchain requirements to tests

* fix(lint): add missing space in isJava8

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Vladimir Petko <vladimir.petko@canonical.com>

* fix(lint): add missing space in RockcraftPluginTest

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Vladimir Petko <vladimir.petko@canonical.com>

* fix: use jre-headless packages

* fix(lint): remove extra space

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Vladimir Petko <vladimir.petko@canonical.com>

* fix: add build package to RawRuntimePart

* fix: use toString() when adding override-build in RawRuntimePart

---------

Signed-off-by: Vladimir Petko <vladimir.petko@canonical.com>
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>